--- a/src/index/index.html
+++ b/src/index/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>webpack-demo</title>
-    <link rel="stylesheet" href="./css/style.less">
+    <link rel="stylesheet" href="./style.less">
     <script src="./js/index.js"></script>
 </head>
 <body>
