--- a/src/index/index.html
+++ b/src/index/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>webpack-demo</title>
     <link rel="stylesheet" href="./style.less">
-    <script src="./js/index.js"></script>
 </head>
 <body>
     <div>hello world</div>
+    <script src="./js/vendors.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
